# wordpress-wp-webhooks

./: .gitignore  README.md  app.py  package.json  pyproject.toml  serverless.yml
docs/: README.md
samples/: user_login.json
